# poetry_exercise

./: README.md  pyproject.toml
poetry-exercise/: main.py
