[tool.poetry]
name = "poetry-exercise"
version = "0.1.0"
description = ""
authors = ["Melissa Celi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
deep-translator = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
